rns-lang/tests/snapshots/parser-class_directive-header-trailing_tokens-dot_class.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld .class AnotherClass
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected directive after class name
   ╭─[ test_data/integration/parser/class_directive/header/trailing_tokens/dot_class.ja:1:26 ]
   │
 1 │ .class public HelloWorld .class AnotherClass
   │                          ─────────┬─────────  
   │                                   ╰─────────── directive '.class' is not allowed here
   │ 
   │ Note: The '.class' directive cannot be nested. Consider removing the second '.class' (todo when nested metada data is supported explain it).
───╯
