rns-lang/tests/snapshots/parser-class_directive-header-trailing_tokens-method_descriptor.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld ()V
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: Unexpected method descriptor after class name
   ╭─[ test_data/integration/parser/class_directive/header/trailing_tokens/method_descriptor.ja:1:26 ]
   │
 1 │ .class public HelloWorld ()V
   │                          ─┬─  
   │                           ╰─── Method descriptors cannot appear after class name.
   │ 
   │ Note: The class definition should end after the class name.
   │       Method descriptors specify method signatures and must appear after method names in .method directives.
───╯
